added semantic elements to html structure. added inline style, internal style and external style

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <h1>My favorite things</h1>
     <hr>
     <br>
+    <section>
     <h2> My Favorite Sport</h2>
     <p>My favorite sport is Basketball</p>
+    </section>
+    <section
     <h2>My favorite Foods</h2>
     <ol start="1">
       <li><strong>Burgers</strong><li>  
@@ -17,5 +20,6 @@
       <li>Pizza</li><p>In that order</p>
       </ol>
       <img src="https://res.cloudinary.com/culturemap-com/image/upload/ar_4:3,c_fill,g_faces:center,w_980/v1496955664/photos/254910_original.jpg" width="100" height="100"
+      </section>
   </body>
 </html>
