--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
   <!-- this is the head, which contains information about the site -->
   <head>
     <!-- this will show in tittle tab -->
+    <Tittle>My favoriate Thingd</tittle>
   </head>
   <body>
     <h1>My favorite things</h1>
     <hr>
     <br>
     <section>
-    <h2> My Favorite Sport</h2>
-    <p>My favorite sport is Basketball</p>
+      <h2> My Favorite Sport</h2>
+      <p>My favorite sport is Basketball</p>
     </section>
-    <section
+    <section>
     <h2>My favorite Foods</h2>
     <ol start="1">
-      <li><strong>Burgers</strong><li>  
+      <li><strong>Burgers</strong></li>  
       <li>Lasgna</li>
       <li>Pizza</li><p>In that order</p>
       </ol>
       <img src="https://res.cloudinary.com/culturemap-com/image/upload/ar_4:3,c_fill,g_faces:center,w_980/v1496955664/photos/254910_original.jpg" width="100" height="100"
       </section>
+      <footer>
+        <p>By: Niari</p>
+        </footer>
   </body>
 </html>
