--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
   <!-- this is the head, which contains information about the site -->
-  <head>
+    <head>
     <!-- this will show in tittle tab -->
-    <Tittle>My favoriate Thingd</tittle>
-  </head>
-  <body>
-    <h1>My favorite things</h1>
-    <hr>
-    <br>
-    <section>
-      <h2> My Favorite Sport</h2>
-      <p>My favorite sport is Basketball</p>
-    </section>
-    <section>
+    <title>My favoriate Things</title>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    </head>
+    <body style="background-color: #C7A2FF">
+    <header style="background-color: #FAF16E">
+  <h1>My favorite things</h1>
+      <hr>
+    </header>
+      <br>
+      <section>
+    <h2> My Favorite Sport</h2>
+      <p>My favorite sport is Basketball.</p>
+      <ol start="-">
+      <p><strong>If I had to choose my favoriate professional basketball player it would be Lebron James.</strong></p>
+     </section>
+      <section>
     <h2>My favorite Foods</h2>
-    <ol start="1">
-      <li><strong>Burgers</strong></li>  
-      <li>Lasgna</li>
-      <li>Pizza</li><p>In that order</p>
-      </ol>
-      <img src="https://res.cloudinary.com/culturemap-com/image/upload/ar_4:3,c_fill,g_faces:center,w_980/v1496955664/photos/254910_original.jpg" width="100" height="100"
+        <ol start="1">
+        <li><strong>Burgers</strong></li>  
+        <li>Lasgna</li>
+        <li>Pizza</li><p>In that order</p>
+        </ol>
+        <img    src="https://res.cloudinary.com/culturemap-com/image/upload/ar_4:3,c_fill,g_faces:center,w_980/v1496955664/photos/254910_original.jpg"   width="100" height="100"
       </section>
       <footer>
-        <p>By: Niari</p>
-        </footer>
+        <p>By: Niari Smith</p>
+      </footer>
   </body>
 </html>
