--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <!-- this is the head, which contains information about the site -->
     <head>
     <!-- this will show in tittle tab -->
-    <title>My favoriate Things</title>
+    <title>My favorite Things</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body style="background-color: #C7A2FF">
-    <header style="background-color: #FAF16E">
-  <h1>My favorite things</h1>
+    <header style="background-color: #FCED06">
+  <h1>MY FAVORITE THINGS</h1>
       <hr>
     </header>
       <br>
